Switch Virtual Env with Project Strucutre

--- a/index.qmd
+++ b/index.qmd
@@ -75,8 +75,8 @@ This course is for researchers who want to learn how to automate repetitive task
 | Part 1  |     |                      | Part 2 |     |                 |
 |---------|-----|----------------------|--------|-----|-----------------|
 | January | 16  | Terminal             | March  | 6   | Version Control |
-|         | 23  | Virtual Environments |        | 13  | Testing         |
-|         | 30  | Project Structure    |        | 27  | Automation      |
+|         | 23  | Project Structure    |        | 13  | Testing         |
+|         | 30  | Virtual Environments |        | 27  | Automation      |
 
 
 ## Drop-in
