--- a/02_project_structure.qmd
+++ b/02_project_structure.qmd
@@ -60,7 +60,7 @@ Once unzipped, open the directory with VS Code (`Cmd+O`).
 │   └── time_machine.txt
 ├── counts                          <-- Word count .tsv data
 ├── figures                         <-- Bar plots of word counts
-├── README.md
+├── README.md                       <-- README for the project
 └── scripts                         <-- Scripts directory
     ├── count_words.sh              <-- Counts occurences of word in a books
     ├── get_summary.sh              <-- Gets a book summary
